2004-05-28  Todd Berman  <tberman@sevenl.net>

	* Gui/Dialogs/CombineConfiguration/CombineStartupPanel.cs:
	* Gui/Dialogs/OptionPanels/ProjectOptions/CompileFileProjectOptions.cs:
	* Gui/Dialogs/OptionPanels/ProjectOptions/DeployFileOptions.cs:
	* Gui/Dialogs/OptionPanels/ExternalToolPanel.cs:
	* Gui/Dialogs/ReferenceDialog/SelectReferenceDialog.cs:
	* Gui/Dialogs/ReferenceDialog/GacReferencePanel.cs:
	* Gui/Pads/HelpBrowser/MonodocTreePad.cs:
	* Internal/Project/Project/IncludeFilesDialog.cs: update to reflect
	gtk-sharp api out -> ref change

2004-05-27  Todd Berman  <tberman@sevenl.net>

	* Services/Project/DefaultProjectService.cs: fix removing files
	from projects via the project browser.

2004-05-27  Todd Berman  <tberman@sevenl.net>

	* Internal/Project/Project/Combine.cs: properly handle spaces in the
	solution and project names.
	* Gui/Pads/ProjectBrowser/BrowserNode/CombineBrowserNode.cs: check
	for invalid characters.

2004-05-27  Todd Berman  <tberman@sevenl.net>

	* Internal/Project/Project/AbstractProject.cs: Properly ignore
	.svn and CVS directories.
	* Gui/Pads/ClassScout/ClassScout.cs: Properly work around potential
	exceptions until we figure out why they are happening.
	* Commands/ProjectBrowserCommands/FolderNodeCommands.cs: start
	the add file dialog in the proper place.

2004-05-26  Todd Berman  <tberman@sevenl.net>

	* Internal/Project/Combine/Combine.cs: fix nullref when you dont
	have a valid single startup project name set.

2004-05-26  Todd Berman  <tberman@sevenl.net>

	* Gui/Dialogs/ReferenceDialog/SelectReferenceDialog.cs: fix up
	per edd's suggestions. Now we select a valid node if possible when
	you remove, and the remove button is only sensitive when an iter is
	selected.

2004-05-26  Todd Berman  <tberman@sevenl.net>

	* Services/ProjectService/DefaultProjectService.cs: move the call to
	GenerateMakefiles when the solution is closed to somewhere that
	actually generates a makefile.

2004-05-26  Todd Berman  <tberman@sevenl.net>
